[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Pennywise.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Character.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/TileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/CarSpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=5]
[ext_resource path="res://Scenes/GUI.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 17840, -6232, 0, 0, 0, 0, 15584, -5136, 0, 0, 0, 0, 14016, -4320, 0, 0, 0, 0, 13328, -3968, 0, 0, 0, 0, 12416, -3536, 0, 0, 0, 0, 11336, -3008, 0, 0, 0, 0, 9688, -2160, 0, 0, 0, 0, 8960, -1808, 0, 0, 0, 0, 7120, -888, 0, 0, 0, 0, 5568, -120, 0, 0, 0, 0, 5024, 152, 0, 0, 0, 0, 3760, 792, 0, 0, 0, 0, 1896, 1696, 0, 0, 0, 0, 2384, 1960, 0, 0, 0, 0, 5208, 544, 0, 0, 0, 0, 5560, 328, 0, 0, 0, 0, 6096, 104, 0, 0, 0, 0, 9512, -1600, 0, 0, 0, 0, 10112, -1928, 0, 0, 0, 0, 14584, -4160, 0, 0, 0, 0, 16160, -4968, 0, 0, 0, 0, 18176, -5960, 0, 0, 0, 0, 18920, -6328, 0, 0, 0, 0, 18584, -6608, 0, 0, 0, 0, 17840, -6232 )
}

[node name="Node2D" type="Node"]
script = ExtResource( 5 )

[node name="TileMap" parent="." instance=ExtResource( 3 )]

[node name="Character" parent="." instance=ExtResource( 2 )]
position = Vector2( 1226.75, 2319.15 )
scale = Vector2( 0.5, 0.5 )

[node name="CarSpawner" parent="." instance=ExtResource( 4 )]
position = Vector2( 3548.71, -883.631 )

[node name="CarSpawner2" parent="." instance=ExtResource( 4 )]
position = Vector2( 7800.03, -2717.9 )

[node name="CarSpawner3" parent="." instance=ExtResource( 4 )]
position = Vector2( 13178.7, -5583.96 )

[node name="Pennywise" parent="." instance=ExtResource( 1 )]
position = Vector2( 1002.07, 2461.52 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
build_mode = 1
polygon = PoolVector2Array( 18752, -6816, 19456, -6464, 1088, 2720, 384, 2368 )

[node name="ChildPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="ChildSpawner" type="PathFollow2D" parent="ChildPath"]
position = Vector2( 17840, -6232 )
rotation = 2.65934
rotate = false

[node name="GUI" parent="." instance=ExtResource( 6 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 10232, -2232 )
current = true
zoom = Vector2( 10, 10 )

[node name="PennywiseHunger" type="Timer" parent="."]
autostart = true

[node name="ChildSpawn" type="Timer" parent="."]
autostart = true
[connection signal="pennywise" from="Character" to="." method="_on_Character_pennywise"]
[connection signal="timeout" from="PennywiseHunger" to="." method="_on_PennywiseHunger_timeout"]
[connection signal="timeout" from="ChildSpawn" to="." method="_on_ChildSpawn_timeout"]
